--- a/css/common.css
+++ b/css/common.css
@@ -103,46 +103,46 @@ input {
 
 
 
-.shortcut {
+.app-topnav {
   height: 53px;
   background-color: #333;
   color: #fff;
 }
 
-.wrapper {
+.container {
   width: 1240px;
   margin: 0 auto;
 }
 
-.shortcut .wrapper {
+.app-topnav .container {
   height: 100%;
   /* background-color:rgb(188, 0, 31); */
 }
 
-.shortcut .wrapper ul {
+.app-topnav .container ul {
   float: right;
   line-height: 53px;
 }
 
-.shortcut .wrapper li {
+.app-topnav .container li {
   float: left;
 }
 
-.shortcut .wrapper ul li a {
+.app-topnav .container ul li a {
   padding: 0 15px;
 }
 
 /* 顶部快捷导航houver */
-.shortcut .wrapper ul li a:hover {
+.app-topnav .container ul li a:hover {
   color: #27ba9b;
 }
 
-.shortcut .wrapper a {
+.app-topnav .container a {
   font-size: 14px;
   color: #cdcdcd;
 }
 
-.shortcut .wrapper ul li span {
+.app-topnav .container ul li span {
   border-image: 1px solid #666;
   color: #666;
 
@@ -704,9 +704,9 @@ input {
 
 /* 热门品牌 */
 .home-panel {
-  width: 1902px;
-  height: 457px;
-  background-color: #f5f5f5;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
 }
 
 .home-panel .xiaxian {
