--- a/css/common.css
+++ b/css/common.css
@@ -369,6 +369,10 @@ input {
   line-height: 15px;
 }
 
+app-body {
+  min-height: 600px;
+}
+
 /* 新鲜好物 */
 .head {
   padding: 40px 0;
@@ -705,8 +709,13 @@ input {
 /* 热门品牌 */
 .home-panel {
   width: 100%;
-  height: 100%;
+  height: 541px;
   background-color: #fff;
+}
+
+.home-banner {
+  height: 460px;
+  background-color: #f5f5f5;
 }
 
 .home-panel .xiaxian {
