--- a/css/Order.css
+++ b/css/Order.css
@@ -260,13 +260,21 @@ display: inline-block;
 padding-bottom: 7px;
 }
 
+.app-header-nav li a:hover {
+  color: #27ba9b;
+  border-bottom: 1px solid #27ba9b;
+  height: 32px;
+  line-height: 32px;
+  display: inline-block;
+}
+
 .layer .open{
   height: 1320px;
   opacity: 0;
 }
 /* 鼠标移入悬停显示下拉菜单（导航栏鼠标经过 hover 时出现二级菜单） */
 .layer{
-  display: none;
+  display: block;
   width: 1240px;
   background-color: #fff;
   position: absolute;
@@ -275,7 +283,7 @@ padding-bottom: 7px;
   height: 0;
   overflow: hidden;
   box-shadow: 0 0 5px #ccc;
-  transform: all .2s .1s;
+  transition: all .2s .1s;
 }
 
 .layer ul{
