--- a/css/common.css
+++ b/css/common.css
@@ -758,6 +758,11 @@ app-body {
   margin-left: 5px;
 }
 
+.iconfont.disabled {
+  background: #ccc;
+  cursor: not-allowed
+}
+
 .iconfont[data-v-c2737746] {
   width: 20px;
   height: 20px;
@@ -778,24 +783,30 @@ app-body {
 /* 热门品牌-内容-区域 */
 .box {
   display: flex;
-  width: 1240px;
+  width: 100%;
   height: 345px;
+  overflow: hidden;
+  padding-bottom: 40px
 }
 
-.box li {
-  float: left;
+.box .list {
+  width: 200%;
+  display: flex;
+  transition: all 1s
+}
+
+.box .list li {
   margin-right: 10px;
-  width: 240px;
+  width: 240px
+}
+
+.box .list li:nth-child(5n) {
+  margin-right: 0
 }
 
 .box .list li img {
-  display: block;
   width: 240px;
   height: 305px;
-}
-
-.box li:last-child {
-  margin-right: 0px;
 }
 
 .goods-list li a img {
